--- a/第一章习题.md
+++ b/第一章习题.md
@@ -22,7 +22,8 @@ $1GB = 2^{30}B$
 
 ### 检测点2.1
 1. 写值
->mov ax,62627 AX=F4A3H 
+```
+mov ax,62627 AX=F4A3H 
 mov ah,31H AX=31A3H 
 mov al,23H AX=3123H 
 add ax,ax AX=6246H 
@@ -36,7 +37,7 @@ add ah,ah AX=D882H
 add al,6 AX=D888H 
 add al,al AX=D810H 
 mov ax,cx AX=6246H
-
+```
 
 2. 
 ```
